ELIMINACION DE CSS E IMAGES PARA PASARLOS A STATIC

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -1,9 +1,15 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="es">
 <head>
-    <title></title>
+	<meta charset="UTF-8">
+	<title>{{titulo}}</title>
 </head>
 <body>
+	<header>
+		<hgroup>
+
+		</hgroup>
+	</header>
 
 </body>
 </html>
