--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
         <meta name="keywords" content="html5, css3, form, switch, animation, :target, pseudo-class" />
         <meta name="author" content="Codrops" />
         <link rel="shortcut icon" href="../favicon.ico"> 
-        <link rel="stylesheet" type="text/css" href="css/demo.css" />
-        <link rel="stylesheet" type="text/css" href="css/style3.css" />
-		<link rel="stylesheet" type="text/css" href="css/animate-custom.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/demo.css" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style3.css" />
+		<link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/animate-custom.css" />
     </head>
     <body>
        <!--/ Codrops top bar -->            
