--- a/templates/principal.html
+++ b/templates/principal.html
@@ -6,60 +6,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}css/mio.css" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-default" role="navigation">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <form class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-    </form>
-    <ul class="nav navbar-nav">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supermercado<b class="caret"></b></a>
-            <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li class="divider"></li>
-                <li><a href="#">Separated link</a></li>
-                <li class="divider"></li>
-                <li><a href="#">One more separated link</a></li>
-            </ul>
-        </li>
-    </ul>
-    <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Brand</a>
+<div class="container">
+    <div class="page-header">
+        <h1>Búsqueda de productos
+            <small>Encuentralo todo</small>
+        </h1>
     </div>
+    <nav class="navbar navbar-default" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="#">Link</a></li>
+        <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+                <input type="text" class="form-control" placeholder="Nombre del producto">
+            </div>
+            <button type="submit" class="btn btn-default">Buscar <span class=" .glyphicon .glyphicon-search"></span></button>
+        </form>
+        <ul class="nav navbar-nav">
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supermercado<b class="caret"></b></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
                     <li><a href="#">Something else here</a></li>
                     <li class="divider"></li>
                     <li><a href="#">Separated link</a></li>
+                    <li class="divider"></li>
+                    <li><a href="#">One more separated link</a></li>
                 </ul>
             </li>
         </ul>
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Brand</a>
+        </div>
+    </nav>
+    <div class="row">
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+
+                    <p>Esto es un thumbnail</p>
+
+                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
+                                                                                       role="button">Detalles</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+
+                    <p>Esto es un thumbnail</p>
+
+                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
+                                                                                       role="button">Detalles</a></p>
+                </div>
+            </div>
+        </div>
+
     </div>
-    <!-- /.navbar-collapse -->
-</nav>
+
+</div>
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://code.jquery.com/jquery.js"></script>
