--- a/templates/principal.html
+++ b/templates/principal.html
@@ -64,6 +64,37 @@
                 </div>
             </div>
         </div>
+
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+
+                    <p>Esto es un thumbnail</p>
+
+                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
+                                                                                       role="button">Detalles</a></p>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                <div class="caption">
+                    <h3>Thumbnail label</h3>
+
+                    <p>Esto es un thumbnail</p>
+
+                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
+                                                                                       role="button">Detalles</a></p>
+                </div>
+            </div>
+        </div>
+
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
