--- a/templates/principal.html
+++ b/templates/principal.html
@@ -22,7 +22,8 @@
             <div class="form-group">
                 <input type="text" class="form-control" placeholder="Nombre del producto">
             </div>
-            <button type="submit" class="btn btn-default">Buscar <span class=" .glyphicon .glyphicon-search"></span></button>
+            <button type="submit" class="btn btn-default">Buscar <span class=" .glyphicon .glyphicon-search"></span>
+            </button>
         </form>
         <ul class="nav navbar-nav">
             <li class="dropdown">
@@ -49,68 +50,88 @@
             <a class="navbar-brand" href="#">Brand</a>
         </div>
     </nav>
-    <div class="row">
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
 
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
 
-                    <p>Esto es un thumbnail</p>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3 class="panel-title">Panel title</h3>
+        </div>
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
 
-                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
-                                                                                       role="button">Detalles</a></p>
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+
+                            <p>Esto es un thumbnail</p>
+
+                            <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#"
+                                                                                                class="btn btn-default"
+                                                                                                role="button">Detalles</a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+
+                            <p>Esto es un thumbnail Esto es un thumbnail Esto es un thumbnail Esto es un thumbnail Esto
+                                es un
+                                thumbnail Esto es un thumbnail</p>
+
+                            <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#"
+                                                                                                class="btn btn-default"
+                                                                                                role="button">Detalles</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+
+                            <p>Esto es un thumbnail</p>
+
+                            <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#"
+                                                                                                class="btn btn-default"
+                                                                                                role="button">Detalles</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="thumbnail">
+                        <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
+
+                        <div class="caption">
+                            <h3>Thumbnail label</h3>
+
+                            <p>Esto es un thumbnail</p>
+
+                            <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#"
+                                                                                                class="btn btn-default"
+                                                                                                role="button">Detalles</a>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
-
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
-
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-
-                    <p>Esto es un thumbnail</p>
-
-                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
-                                                                                       role="button">Detalles</a></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
-
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-
-                    <p>Esto es un thumbnail</p>
-
-                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
-                                                                                       role="button">Detalles</a></p>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-sm-6 col-md-4">
-            <div class="thumbnail">
-                <img src="{{ STATIC_URL }}images/productos/carne-320x210.jpg" height="320" alt="...">
-
-                <div class="caption">
-                    <h3>Thumbnail label</h3>
-
-                    <p>Esto es un thumbnail</p>
-
-                    <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#" class="btn btn-default"
-                                                                                       role="button">Detalles</a></p>
-                </div>
-            </div>
-        </div>
-
     </div>
+
 
 </div>
 
