-LOGIN ACTIVO -FALTA LOGOUT -PRIMER FORM -GESTION DE PLANTILLAS MAS AVANZADO

--- a/templates/principal.html
+++ b/templates/principal.html
@@ -1,20 +1,5 @@
-<!doctype html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>{{ titulo }}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ STATIC_URL }}css/mio.css" rel="stylesheet">
-</head>
-<body>
-<div class="container">
-    <div class="page-header">
-        <h1>Búsqueda de productos
-            <small>Encuentralo todo</small>
-        </h1>
-    </div>
+{% extends 'base.html' %}
+{% block bar %}
     <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
 
@@ -50,25 +35,4 @@
             <a class="navbar-brand" href="#">Brand</a>
         </div>
     </nav>
-
-    <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">{% block tituloPanel %}{% endblock %}</h3>
-                </div>
-                <div class="panel-body">
-    {% block cuerpo %}
-
-    {% endblock %}
-                </div>
-    </div>
-
-
-</div>
-
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://code.jquery.com/jquery.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock %}
