--- a/templates/productos.html
+++ b/templates/productos.html
@@ -1,27 +1,33 @@
 {% extends 'principal.html' %}
-
+{% block cabecera %}
+    Búsqueda de productos
+{% endblock %}
+{% block panel %}
+    Productos disponibles
+{% endblock %}
 {% block cuerpo %}
-    {% if productos %}
-        <div class="row">
-            {% for producto in productos %}
-                <div class="col-sm-6 col-md-4">
-                    <div class="thumbnail">
-                        <img src="{{  }}" alt="...">
+    <div class="row">
+        {% for catalogo in catalogos %}
+            <div class="col-sm-6 col-md-4">
+                <div class="thumbnail">
+                    <img src="/{{ catalogo.imagen }}" alt="...">
 
-                        <div class="caption">
-                            <h3>Thumbnail label</h3>
+                    <div class="caption">
+                        <h3>{{ catalogo.producto.nombre }}</h3>
 
-                            <p>Esto es un thumbnail</p>
+                        <h4>{{ catalogo.supermercado.nombre }}</h4>
 
-                            <p><a href="#" class="btn btn-primary" role="button">Comprar</a> <a href="#"
-                                                                                                class="btn btn-default"
-                                                                                                role="button">Detalles</a>
-                            </p>
-                        </div>
+                        <p>{{ catalogo.producto.descripcion }}</p>
+
+                        <p>
+                            <a href="#" class="btn btn-primary" role="button">Añadir al carrito</a>
+                            <a href="#" class="btn btn-default" role="button">Detalles</a>
+                        </p>
                     </div>
                 </div>
-            {% endfor %}
-        </div>
-    {% else %}
-    {% endif %}
+            </div>
+        {% empty %}
+            <h3>No hay datos</h3>
+        {% endfor %}
+    </div>
 {% endblock %}
