--- a/templates/login.html
+++ b/templates/login.html
@@ -13,12 +13,9 @@
         <h2 class="form-signin-heading">Login</h2>
         {% csrf_token %}
         {% if mensaje %}
-            <div class="alert alert-warning">{{ mensaje }}</div>
+            <div class="alert alert-danger">{{ mensaje }}</div>
         {% endif %}
         {{ form.as_p }}
-
-        {% comment %}<input type="email" class="form-control" placeholder="Email" required autofocus>
-        <input type="password" class="form-control" placeholder="Contraseña" required>{% endcomment %}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
     </form>
 {% endblock %}
