--- a/templates/supermercados.html
+++ b/templates/supermercados.html
@@ -16,7 +16,7 @@
                         <h3>{{ market.nombre }}</h3>
 
                         <p>
-                            <a href="/catalogo/{{ market.id }}/" class="btn btn-primary" role="button">Elegir</a>
+                            <a href="/catalogo/{{ market.id }}/0" class="btn btn-primary" role="button">Elegir</a>
                         </p>
                     </div>
                 </div>
