--- a/templates/catalogos.html
+++ b/templates/catalogos.html
@@ -5,6 +5,12 @@
 {% block panel %}
     Productos disponibles
 {% endblock %}
+{% block categoria %}
+    <li><a href="0">Todas</a></li>
+    {% for cat in categorias %}
+        <li><a href="{{ cat.id }}">{{ cat.nombre }}</a></li>
+    {% endfor %}
+{% endblock %}
 {% block cuerpo %}
     <div class="row">
         {% for catalogo in catalogos %}
@@ -20,14 +26,14 @@
                         <p>{{ catalogo.producto.descripcion }}</p>
 
                         <p>
-                            <a href="#" class="btn btn-primary" role="button">Añadir al carrito</a>
+                            <a href="#" class="btn btn-primary" role="button" style="width: 100%">Añadir al carrito</a>
 {#                            <a href="#" class="btn btn-default" role="button">Detalles</a>#}
                         </p>
                     </div>
                 </div>
             </div>
         {% empty %}
-            <h3>No hay datos</h3>
+            <h3 style="display: block;margin: 3em auto;">No hay datos</h3>
         {% endfor %}
     </div>
 {% endblock %}
