--- a/templates/principal.html
+++ b/templates/principal.html
@@ -13,39 +13,16 @@
             <button type="submit" class="btn btn-default">Buscar <span class=" .glyphicon .glyphicon-search"></span>
             </button>
         </form>
-        <ul class="nav navbar-nav">
-            <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Supermercado<b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                    <li class="divider"></li>
-                    <li><a href="#">One more separated link</a></li>
-                </ul>
-            </li>
-        </ul>
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse"
-                    data-target="#bs-example-navbar-collapse-1">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="#">Brand</a>
-        </div>
-        <select class="combobox">
-            <option></option>
-            <option value="PA">Pennsylvania</option>
-            <option value="CT">Connecticut</option>
-            <option value="NY">New York</option>
-            <option value="MD">Maryland</option>
-            <option value="VA">Virginia</option>
-        </select>
+
     </nav>
+    <ul class="nav nav-pills">
+        {% block categoria %}
+
+        {% endblock %}
+        {% comment %}<li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Messages</a></li>{% endcomment %}
+    </ul>
 {% endblock %}
 {% block aqui_js %}
     <script src="{{ STATIC_URL }}js/bootstrap-combobox.js"></script>
