--- a/templates/supermercados.html
+++ b/templates/supermercados.html
@@ -5,6 +5,9 @@
 {% block panel %}
     Elija el supermercado del que va a hacer pedido
 {% endblock %}
+{% block bar %}
+
+{% endblock %}
 {% block cuerpo %}
     <div class="row">
         {% for market in markets %}
