--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
 
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://code.jquery.com/jquery.js"></script>
+<script src="{{ STATIC_URL }}js/jquery.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
 {% block aqui_js %}
