--- a/templates/principal.html
+++ b/templates/principal.html
@@ -6,13 +6,21 @@
     <nav class="navbar navbar-default" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
 
-        <form class="navbar-form navbar-left" role="search">
+        <form class="navbar-form navbar-left" role="search" method="POST" action="">
+            {% csrf_token %}
             <div class="form-group">
-                <input type="text" class="form-control" placeholder="Nombre del producto">
+                {% block busqueda %}
+
+                {% endblock %}
+                {# <input type="text" class="form-control" placeholder="Nombre del producto"> #}
             </div>
             <button type="submit" class="btn btn-default">Buscar <span class=" .glyphicon .glyphicon-search"></span>
             </button>
         </form>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/cerrar/">Cerrar sesión</a></li>
+        </ul>
 
     </nav>
     <ul class="nav nav-pills">
