--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -6,8 +6,8 @@
 
 .form-signin {
   max-width: 350px;
-  padding: 15px;
-  margin: 0 auto;
+  padding: 10px;
+  margin: 5em auto 15em auto;
 }
 .form-signin .form-signin-heading,
 .form-signin .checkbox {
