--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,15 @@
 </head>
 <body>
 <div class="container">
-    <div class="page-header">
+    {% comment %}<div class="page-header">
         <h1>{% block cabecera %}{% endblock %}
             <small>{% block subcabecera %}{% endblock %}</small>
         </h1>
+    </div>{% endcomment %}
+    <div class="jumbotron">
+        <h1>{% block cabecera %}{% endblock %}</h1>
+
+        <p>{% block subcabecera %}{% endblock %}</p>
     </div>
     {% block bar %}
 
