--- a/templates/login.html
+++ b/templates/login.html
@@ -16,7 +16,7 @@
             <div class="alert alert-danger">{{ mensaje }}</div>
         {% endif %}
         {{ form.as_p }}
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar <span class="glyphicon glyphicon-log-in"></span></span></button>
     </form>
 {% endblock %}
 
