--- a/templates/carrito.html
+++ b/templates/carrito.html
@@ -1,10 +1,48 @@
-{% extends 'principal.html'%}
+{% extends 'principal.html' %}
 {% block cabecera %}
     Carrito de compras
 {% endblock %}
-{% block cuerpo %}
+{% block subcabecera %}
+    Reaalice su pedido
+{% endblock %}
+{% block panel %}
+    Listado de productos
+{% endblock %}
 
-{% for producto in productos %}
-    <p>{{ producto.producto.id }}</p>
-{% endfor %}
+{% block cuerpo %}
+    <form action="" method="POST">
+    {% csrf_token %}
+    <table class="table table-hover" style="text-align: center">
+        <tr>
+            <th>Producto</th>
+            <th>Supermercado</th>
+            <th>Cantidad</th>
+            <th>Precio</th>
+            <th>Eliminar</th>
+        </tr>
+        {% for producto in cart %}
+            <tr>
+                <td><img src="/{{ producto.product.imagen }}" alt="..." class="img-rounded" style="height: 64px"> <h4>{{ producto.product.producto.nombre }}</h4></td>
+                <td>{{ producto.product.supermercado.nombre }}</td>
+                <td><input id="cant[{{ producto.product.id }}]" type="text" value="1" name="cantidad" /></td>
+                <td><label id=precio name=precio for="cant[{{ producto.product.id }}]">{{ producto.product.precio }}</label></td>
+                <td><a href="{{ forloop.counter }}"><span class="glyphicon glyphicon-trash"></span></a></td>
+            </tr>
+        {% endfor %}
+    </table>
+
+    </form>
+{% endblock %}
+{% block aqui_js %}
+{% comment %}<script type="application/javascript">
+    $(document).on("ready",iniciar);
+    function iniciar(){
+        $("form a").on("click",eliminar);
+    }
+    function eliminar(){
+        var href = $(this).attr("href");
+
+
+    }
+</script>{% endcomment %}
 {% endblock %}
