--- a/templates/catalogos.html
+++ b/templates/catalogos.html
@@ -47,7 +47,7 @@
                         </h3>
 
                         <p>
-                            <a href="add_cart/{{ catalogo.id }}" class="btn btn-primary" role="button" style="width: 100%">Añadir al carrito</a>
+                            <a href="add_cart/{{ catalogo.id }}/{{ catalogo.precio }}/" class="btn btn-primary" role="button" style="width: 100%">Añadir al carrito</a>
                             {#                            <a href="#" class="btn btn-default" role="button">Detalles</a>#}
                         </p>
                     </div>
