--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>{{ titulo }}</title>
+    <title>{% block tituloPagina %} {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet">
@@ -13,11 +13,6 @@
 </head>
 <body>
 <div class="container">
-    {% comment %}<div class="page-header">
-        <h1>{% block cabecera %}{% endblock %}
-            <small>{% block subcabecera %}{% endblock %}</small>
-        </h1>
-    </div>{% endcomment %}
     <div class="jumbotron">
         <h1>{% block cabecera %}{% endblock %}</h1>
 
