--- a/templates/supermercados.html
+++ b/templates/supermercados.html
@@ -9,23 +9,42 @@
 
 {% endblock %}
 {% block cuerpo %}
-    <div class="row">
-        {% for market in markets %}
-            <div class="col-sm-6 col-md-4">
-                <div class="thumbnail">
-                    <img src="/{{ market.logo }}" alt="...">
 
-                    <div class="caption">
-                        <h3>{{ market.nombre }}</h3>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            {% for market in markets %}
+                <li data-target="#carousel-example-generic" data-slide-to="{{ forloop.counter }}" {% if forloop.first %}
+                    class="active" {% endif %}></li>
+            {% endfor %}
+        </ol>
 
-                        <p>
-                            <a href="/catalogo/{{ market.id }}/0" class="btn btn-primary" role="button">Elegir</a>
-                        </p>
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+            {% for market in markets %}
+                <div class="item {% if forloop.first %}active{% endif %}">
+                    <img src="/{{ market.logo }}" alt="..." style="max-height: 600px;margin: 0 auto;">
+
+                    <div class="carousel-caption">
+                        <h4><a href="{% url 'catalogos_view' market.id 0 %}" class="btn btn-default">{{ market.nombre }}</a></h4>
                     </div>
                 </div>
-            </div>
-        {% empty %}
-            <h3 style="display: block;margin: 3em auto;">No hay datos</h3>
-        {% endfor %}
+            {% endfor %}
+        </div>
+
+        <!-- Controls -->
+        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
     </div>
+{% endblock %}
+{% block aqui_js %}
+    <script type="application/javascript">
+        $('.carousel').carousel({
+            interval: false
+        })
+    </script>
 {% endblock %}
